--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "acme_portal_sdk"
 version = "0.0.12"
-description = "SDK to customize behaviour of acme-portal VSCode extension"
+description = "acme-portal-sdk helps to manage deployments for applications that implement \"flows\" (Jobs/DAGs/Workflows). It's intended to be used with acme-portal VSCode extension."
 readme = "README.md"
 classifiers = [
     "Programming Language :: Python :: 3.10",
