--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -8,6 +8,7 @@ on:
       - 'docs/**'
       - 'src/**'
       - 'pyproject.toml'
+      - 'README.md'
       - '.github/workflows/docs.yml'
 
 jobs:
